# HomeWork

./: CMakeLists.txt  Eduardlab  Lab 4  README.md  Test 1  audits.c  controls.c  incidents.c  security_system.h  utils.c  загружено.jfif
Eduard is smart/: main.cpp
Oleg/: MN_Lab_2_Main.cpp  Main.java
Oleg/CyberSecurity. DES,RSA,VERNAM,AES/: CMakeLists.txt  DES.c  DES.h  RSA.c  RSA.h  main.c  utils.c  utils.h  vernam.c  vernam.h
Oleg/Individual HomeWork/: CMakeLists.txt  list.c  list.h  main.c
Oleg/LAB_5/: CMakeLists.txt  main.cpp
Oleg/Lab_3/src/: Main.java
Oleg/c-project/: documents.c  main.c  menus.c  reports.c  risks.c
matrix/: CMakeLists.txt  main.cpp
